applications/cve-defect-manager/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  namespace: cve-defect-manager
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: manager
  type: ClusterIP
