applications/cve-defect-manager/manager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: manager-ingress
  namespace: cve-defect-manager
spec:
  rules:
  - host: robot-defect.openeuler.org
    http:
      paths:
      - backend:
          serviceName: manager-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - robot-defect.openeuler.org
    secretName: cve-defect-tls
